# bounce

./: .gitignore  BENCHMARKS.txt  Cargo.toml  FORMAT.md  LICENSE  NOTICE  README.md  README.ru.md  bench_bounce.sh  benchmark.sh
.github/workflows/: ci.yml  release.yml
src/: archive.rs  codec.rs  main.rs
