[package]
name = "bounce"
version = "1.0.0"
edition = "2021"
description = "bounce — a fast, zero-dependency file archiver using the Big Bounce smart-deflate codec"
license = "Apache-2.0"
authors = ["Oleg"]

[[bin]]
name = "bounce"
path = "src/main.rs"

[dependencies]
# Zero external dependencies — pure std for portability and reproducible builds.

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
