[package]
name = "nvg-bounce"
version = "1.0.4"
edition = "2021"
description = "A high-performance, zero-dependency file archiver built on the NVG-bounce cosmological architecture"
license = "Apache-2.0"
authors = ["Oleg"]
repository = "https://github.com/infosave2007/bounce"
readme = "README.md"
keywords = ["compression", "archiver", "zero-dependency", "vmf", "cli"]
categories = ["command-line-utilities", "compression"]

[[bin]]
name = "bounce"
path = "src/main.rs"

[dependencies]
# Zero external dependencies — pure std for portability and reproducible builds.

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
